// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeScreen renders correctly 1`] = `
<div>
  <View
    style={
      {
        "paddingHorizontal": 18,
        "paddingTop": 18,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "width": "85%",
          }
        }
      >
        <Text
          accessibilityHint="address"
          accessibilityLabel="address"
          accessibilityRole="text"
          accessible={true}
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            [
              {},
              [
                {
                  "fontSize": 23,
                  "lineHeight": 35,
                },
                {
                  "fontFamily": "Helvetica Neue",
                },
                {
                  "color": "#191015",
                },
              ],
              undefined,
              undefined,
              {
                "color": "#FFFFFF",
                "fontFamily": "Helvetica Neue",
                "fontSize": 29,
                "lineHeight": 37,
              },
            ]
          }
        />
        <Text
          accessibilityHint="timezone"
          accessibilityLabel="timezone"
          accessibilityRole="text"
          accessible={true}
          style={
            [
              {},
              [
                {
                  "fontSize": 23,
                  "lineHeight": 35,
                },
                {
                  "fontFamily": "Helvetica Neue",
                },
                {
                  "color": "#191015",
                },
              ],
              undefined,
              undefined,
              {
                "color": "#978F8A",
                "fontFamily": "Helvetica Neue",
                "fontSize": 15,
                "lineHeight": 23,
                "textAlign": "left",
              },
            ]
          }
        >
          homeScreen.header.timezone undefined: UTC
        </Text>
      </View>
      <View
        accessibilityHint="open select location modal"
        accessibilityLabel="pin button"
        accessibilityRole="imagebutton"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {},
            }
          }
          jestInlineStyle={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#1E2022",
                "borderRadius": 143,
                "display": "flex",
                "height": 60,
                "justifyContent": "center",
                "overflow": "hidden",
                "position": "relative",
                "width": 60,
              },
              undefined,
              undefined,
            ]
          }
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#1E2022",
                "borderRadius": 143,
                "display": "flex",
                "height": 60,
                "justifyContent": "center",
                "overflow": "hidden",
                "position": "relative",
                "width": 60,
              },
              undefined,
              undefined,
            ]
          }
        >
          <div>
            <View>
              <RCTImageView
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                internal_analyticTag={null}
                resizeMode="contain"
                source={
                  [
                    {
                      "testUri": "../../../assets/icons/pin.png",
                    },
                  ]
                }
                style={
                  [
                    {
                      "height": undefined,
                      "width": undefined,
                    },
                    {
                      "overflow": "hidden",
                    },
                    [
                      {
                        "resizeMode": "contain",
                      },
                      {
                        "tintColor": "#FFFFFF",
                      },
                      {
                        "height": 29,
                        "width": 29,
                      },
                      undefined,
                    ],
                  ]
                }
                tintColor="#FFFFFF"
              />
            </View>
          </div>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "alignItems": "stretch",
            "backgroundColor": "#1E2022",
            "borderRadius": 29,
            "gap": 17,
            "marginTop": 22,
            "padding": 22,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          accessibilityHint="sighting header"
          accessibilityLabel="sighting header"
          accessibilityRole="text"
          accessible={true}
          style={
            [
              {},
              [
                {
                  "fontSize": 23,
                  "lineHeight": 35,
                },
                {
                  "fontFamily": "Helvetica Neue",
                },
                {
                  "color": "#191015",
                },
              ],
              undefined,
              undefined,
              {
                "color": "#978F8A",
                "fontFamily": "Helvetica Neue",
                "fontSize": 15,
                "lineHeight": 23,
                "textAlign": "left",
              },
            ]
          }
        >
          homeScreen.header.firstTimeHead undefined
        </Text>
        <Text
          accessibilityHint="sighting"
          accessibilityLabel="sighting"
          accessibilityRole="text"
          accessible={true}
          style={
            [
              {},
              [
                {
                  "fontSize": 23,
                  "lineHeight": 35,
                },
                {
                  "fontFamily": "Helvetica Neue",
                },
                {
                  "color": "#191015",
                },
              ],
              undefined,
              undefined,
              {
                "color": "#DEDDDE",
                "fontFamily": "Helvetica Neue",
                "fontSize": 23,
                "lineHeight": 35,
                "marginTop": 3,
              },
            ]
          }
        >
          -
        </Text>
        <View
          style={
            {
              "flex": 1,
            }
          }
        />
        <View
          accessibilityHint="show sighting opportunities"
          accessibilityLabel="sighting opportunities"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              [
                {
                  "alignItems": "center",
                  "borderRadius": 6,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "minHeight": 80,
                  "overflow": "hidden",
                  "paddingHorizontal": 17,
                  "paddingVertical": 17,
                },
                {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#B6ACA6",
                  "borderWidth": 1,
                },
              ],
              {
                "backgroundColor": "#0B3D91",
                "borderRadius": 40,
                "borderWidth": 0,
                "minHeight": 0,
                "paddingHorizontal": 12,
                "paddingVertical": 12,
                "width": "100%",
              },
              false,
            ]
          }
        >
          <Text
            style={
              [
                {},
                [
                  {
                    "fontSize": 23,
                    "lineHeight": 35,
                  },
                  {
                    "fontFamily": "Helvetica Neue",
                  },
                  {
                    "color": "#191015",
                  },
                ],
                undefined,
                undefined,
                [
                  {
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "fontFamily": "HelveticaNeue-Medium",
                    "fontSize": 23,
                    "lineHeight": 29,
                    "textAlign": "center",
                    "zIndex": 2,
                  },
                  {
                    "color": "#DEDDDE",
                    "fontSize": 20,
                  },
                  false,
                ],
              ]
            }
          >
            homeScreen.header.opportunities undefined
          </Text>
        </View>
      </View>
      <View
        accessibilityHint="countdown to next sighting"
        accessibilityLabel="countdown"
        accessibilityRole="text"
        accessible={true}
        style={
          {
            "borderColor": "#564E4A",
            "borderRadius": 29,
            "borderWidth": 0.5,
            "gap": 3,
            "justifyContent": "center",
            "padding": 17,
          }
        }
      >
        <Text
          style={
            [
              {},
              [
                {
                  "fontSize": 23,
                  "lineHeight": 35,
                },
                {
                  "fontFamily": "Helvetica Neue",
                },
                {
                  "color": "#191015",
                },
              ],
              undefined,
              undefined,
              {
                "color": "#978F8A",
                "fontFamily": "Helvetica Neue",
                "fontSize": 17,
                "lineHeight": 23,
                "textAlign": "center",
              },
            ]
          }
        >
          homeScreen.header.secondTimeHead undefined
        </Text>
        <Text
          style={
            [
              {},
              [
                {
                  "fontSize": 23,
                  "lineHeight": 35,
                },
                {
                  "fontFamily": "Helvetica Neue",
                },
                {
                  "color": "#191015",
                },
              ],
              undefined,
              undefined,
              {
                "color": "#DEDDDE",
                "fontFamily": "Helvetica Neue",
                "fontSize": 22,
                "lineHeight": 35,
              },
            ]
          }
        >
          units.time undefined - 00:00:00:00
        </Text>
        <Text
          style={
            [
              {},
              [
                {
                  "fontSize": 23,
                  "lineHeight": 35,
                },
                {
                  "fontFamily": "Helvetica Neue",
                },
                {
                  "color": "#191015",
                },
              ],
              undefined,
              undefined,
              {
                "color": "#978F8A",
                "fontFamily": "Helvetica Neue",
                "fontSize": 13,
                "lineHeight": 23,
                "textAlign": "center",
              },
            ]
          }
        >
          DD:HH:MM:SS
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    />
    <View
      style={
        [
          {
            "width": "100%",
          },
          {
            "aspectRatio": 2.25,
          },
        ]
      }
      testID="flat-map"
    >
      <RCTImageView
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        internal_analyticTag={null}
        resizeMode="cover"
        source={
          [
            {
              "testUri": "../../../assets/images/World-Map.jpg",
            },
          ]
        }
        style={
          [
            {
              "height": undefined,
              "width": undefined,
            },
            {
              "overflow": "hidden",
            },
            {
              "height": "100%",
              "position": "absolute",
              "width": "100%",
            },
          ]
        }
      />
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth="100%"
        focusable={false}
        onLayout={[Function]}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "height": "100%",
              "width": "100%",
            },
            {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            d="M0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0z"
            fill={
              {
                "payload": 4278926737,
                "type": 0,
              }
            }
            fillOpacity={0.5}
            propList={
              [
                "fill",
                "fillOpacity",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</div>
`;

exports[`HomeScreen with ISS data renders correctly 1`] = `
<div>
  <View
    style={
      {
        "paddingHorizontal": 18,
        "paddingTop": 18,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "width": "85%",
          }
        }
      >
        <Text
          accessibilityHint="address"
          accessibilityLabel="address"
          accessibilityRole="text"
          accessible={true}
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            [
              {},
              [
                {
                  "fontSize": 23,
                  "lineHeight": 35,
                },
                {
                  "fontFamily": "Helvetica Neue",
                },
                {
                  "color": "#191015",
                },
              ],
              undefined,
              undefined,
              {
                "color": "#FFFFFF",
                "fontFamily": "Helvetica Neue",
                "fontSize": 29,
                "lineHeight": 37,
              },
            ]
          }
        />
        <Text
          accessibilityHint="timezone"
          accessibilityLabel="timezone"
          accessibilityRole="text"
          accessible={true}
          style={
            [
              {},
              [
                {
                  "fontSize": 23,
                  "lineHeight": 35,
                },
                {
                  "fontFamily": "Helvetica Neue",
                },
                {
                  "color": "#191015",
                },
              ],
              undefined,
              undefined,
              {
                "color": "#978F8A",
                "fontFamily": "Helvetica Neue",
                "fontSize": 15,
                "lineHeight": 23,
                "textAlign": "left",
              },
            ]
          }
        >
          homeScreen.header.timezone undefined: US/Central
        </Text>
      </View>
      <View
        accessibilityHint="open select location modal"
        accessibilityLabel="pin button"
        accessibilityRole="imagebutton"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {},
            }
          }
          jestInlineStyle={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#1E2022",
                "borderRadius": 143,
                "display": "flex",
                "height": 60,
                "justifyContent": "center",
                "overflow": "hidden",
                "position": "relative",
                "width": 60,
              },
              undefined,
              undefined,
            ]
          }
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#1E2022",
                "borderRadius": 143,
                "display": "flex",
                "height": 60,
                "justifyContent": "center",
                "overflow": "hidden",
                "position": "relative",
                "width": 60,
              },
              undefined,
              undefined,
            ]
          }
        >
          <div>
            <View>
              <RCTImageView
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                internal_analyticTag={null}
                resizeMode="contain"
                source={
                  [
                    {
                      "testUri": "../../../assets/icons/pin.png",
                    },
                  ]
                }
                style={
                  [
                    {
                      "height": undefined,
                      "width": undefined,
                    },
                    {
                      "overflow": "hidden",
                    },
                    [
                      {
                        "resizeMode": "contain",
                      },
                      {
                        "tintColor": "#FFFFFF",
                      },
                      {
                        "height": 29,
                        "width": 29,
                      },
                      undefined,
                    ],
                  ]
                }
                tintColor="#FFFFFF"
              />
            </View>
          </div>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "alignItems": "stretch",
            "backgroundColor": "#1E2022",
            "borderRadius": 29,
            "gap": 17,
            "marginTop": 22,
            "padding": 22,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          accessibilityHint="sighting header"
          accessibilityLabel="sighting header"
          accessibilityRole="text"
          accessible={true}
          style={
            [
              {},
              [
                {
                  "fontSize": 23,
                  "lineHeight": 35,
                },
                {
                  "fontFamily": "Helvetica Neue",
                },
                {
                  "color": "#191015",
                },
              ],
              undefined,
              undefined,
              {
                "color": "#978F8A",
                "fontFamily": "Helvetica Neue",
                "fontSize": 15,
                "lineHeight": 23,
                "textAlign": "left",
              },
            ]
          }
        >
          homeScreen.header.firstTimeHead undefined
        </Text>
        <Text
          accessibilityHint="sighting"
          accessibilityLabel="sighting"
          accessibilityRole="text"
          accessible={true}
          style={
            [
              {},
              [
                {
                  "fontSize": 23,
                  "lineHeight": 35,
                },
                {
                  "fontFamily": "Helvetica Neue",
                },
                {
                  "color": "#191015",
                },
              ],
              undefined,
              undefined,
              {
                "color": "#DEDDDE",
                "fontFamily": "Helvetica Neue",
                "fontSize": 23,
                "lineHeight": 35,
                "marginTop": 3,
              },
            ]
          }
        >
          Nov 06, 5:13 AM CST
        </Text>
        <View
          style={
            {
              "flex": 1,
            }
          }
        />
        <View
          accessibilityHint="show sighting opportunities"
          accessibilityLabel="sighting opportunities"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              [
                {
                  "alignItems": "center",
                  "borderRadius": 6,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "minHeight": 80,
                  "overflow": "hidden",
                  "paddingHorizontal": 17,
                  "paddingVertical": 17,
                },
                {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#B6ACA6",
                  "borderWidth": 1,
                },
              ],
              {
                "backgroundColor": "#0B3D91",
                "borderRadius": 40,
                "borderWidth": 0,
                "minHeight": 0,
                "paddingHorizontal": 12,
                "paddingVertical": 12,
                "width": "100%",
              },
              false,
            ]
          }
        >
          <Text
            style={
              [
                {},
                [
                  {
                    "fontSize": 23,
                    "lineHeight": 35,
                  },
                  {
                    "fontFamily": "Helvetica Neue",
                  },
                  {
                    "color": "#191015",
                  },
                ],
                undefined,
                undefined,
                [
                  {
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "fontFamily": "HelveticaNeue-Medium",
                    "fontSize": 23,
                    "lineHeight": 29,
                    "textAlign": "center",
                    "zIndex": 2,
                  },
                  {
                    "color": "#DEDDDE",
                    "fontSize": 20,
                  },
                  false,
                ],
              ]
            }
          >
            homeScreen.header.opportunities undefined
          </Text>
        </View>
      </View>
      <View
        accessibilityHint="countdown to next sighting"
        accessibilityLabel="countdown"
        accessibilityRole="text"
        accessible={true}
        style={
          {
            "borderColor": "#564E4A",
            "borderRadius": 29,
            "borderWidth": 0.5,
            "gap": 3,
            "justifyContent": "center",
            "padding": 17,
          }
        }
      >
        <Text
          style={
            [
              {},
              [
                {
                  "fontSize": 23,
                  "lineHeight": 35,
                },
                {
                  "fontFamily": "Helvetica Neue",
                },
                {
                  "color": "#191015",
                },
              ],
              undefined,
              undefined,
              {
                "color": "#978F8A",
                "fontFamily": "Helvetica Neue",
                "fontSize": 17,
                "lineHeight": 23,
                "textAlign": "center",
              },
            ]
          }
        >
          homeScreen.header.secondTimeHead undefined
        </Text>
        <Text
          style={
            [
              {},
              [
                {
                  "fontSize": 23,
                  "lineHeight": 35,
                },
                {
                  "fontFamily": "Helvetica Neue",
                },
                {
                  "color": "#191015",
                },
              ],
              undefined,
              undefined,
              {
                "color": "#DEDDDE",
                "fontFamily": "Helvetica Neue",
                "fontSize": 22,
                "lineHeight": 35,
              },
            ]
          }
        >
          units.time undefined + 00:00:29:24
        </Text>
        <Text
          style={
            [
              {},
              [
                {
                  "fontSize": 23,
                  "lineHeight": 35,
                },
                {
                  "fontFamily": "Helvetica Neue",
                },
                {
                  "color": "#191015",
                },
              ],
              undefined,
              undefined,
              {
                "color": "#978F8A",
                "fontFamily": "Helvetica Neue",
                "fontSize": 13,
                "lineHeight": 23,
                "textAlign": "center",
              },
            ]
          }
        >
          DD:HH:MM:SS
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <div />
    </View>
    <View
      style={
        [
          {
            "width": "100%",
          },
          {
            "aspectRatio": 2.25,
          },
        ]
      }
      testID="flat-map"
    >
      <RCTImageView
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        internal_analyticTag={null}
        resizeMode="cover"
        source={
          [
            {
              "testUri": "../../../assets/images/World-Map.jpg",
            },
          ]
        }
        style={
          [
            {
              "height": undefined,
              "width": undefined,
            },
            {
              "overflow": "hidden",
            },
            {
              "height": "100%",
              "position": "absolute",
              "width": "100%",
            },
          ]
        }
      />
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth="100%"
        focusable={false}
        onLayout={[Function]}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "height": "100%",
              "width": "100%",
            },
            {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            d="M0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0z"
            fill={
              {
                "payload": 4278926737,
                "type": 0,
              }
            }
            fillOpacity={0.5}
            propList={
              [
                "fill",
                "fillOpacity",
              ]
            }
          />
          <RNSVGPath
            d="M0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0"
            fill={
              {
                "payload": 0,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
              ]
            }
            stroke={
              {
                "payload": 4279357033,
                "type": 0,
              }
            }
            strokeWidth={3}
            testID="iss-path-polyline"
          />
          <RNSVGPath
            d="M0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0"
            fill={
              {
                "payload": 0,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeDasharray",
              ]
            }
            stroke={
              {
                "payload": 4289572270,
                "type": 0,
              }
            }
            strokeDasharray={
              [
                "5",
                "5",
              ]
            }
            strokeWidth={3}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        style={
          {
            "left": -26,
            "position": "absolute",
            "top": -26,
          }
        }
        testID="iss-marker"
      >
        <View>
          <RCTImageView
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            internal_analyticTag={null}
            resizeMode="contain"
            source={
              [
                {
                  "testUri": "../../../assets/icons/position.png",
                },
              ]
            }
            style={
              [
                {
                  "height": undefined,
                  "width": undefined,
                },
                {
                  "overflow": "hidden",
                },
                [
                  {
                    "resizeMode": "contain",
                  },
                  undefined,
                  {
                    "height": 52,
                    "width": 52,
                  },
                  undefined,
                ],
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          {
            "left": -10,
            "position": "absolute",
            "top": -22,
          }
        }
        testID="current-location-marker"
      >
        <View>
          <RCTImageView
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            internal_analyticTag={null}
            resizeMode="contain"
            source={
              [
                {
                  "testUri": "../../../assets/icons/fi_map-pin.png",
                },
              ]
            }
            style={
              [
                {
                  "height": undefined,
                  "width": undefined,
                },
                {
                  "overflow": "hidden",
                },
                [
                  {
                    "resizeMode": "contain",
                  },
                  undefined,
                  {
                    "height": 22,
                    "width": 22,
                  },
                  undefined,
                ],
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</div>
`;
